Fixed z-index problems with modal and top navigation banner

--- a/app/lines/css/app.css
+++ b/app/lines/css/app.css
@@ -499,7 +499,7 @@ ul.data-portal-nav-tabs {
 #topmenu {
   position:fixed;
   top: 0; left: 0; right: 0;
-  z-index: 9999;
+  z-index: 999;
   font-family:"pontiac_bold-webfont", Arial, sans-serif;
 }
 #logo {
